provision-multiple-ec2-linux/securitygroup.tf

data "aws_security_group" "default" {
  name = "default"
}

resource "aws_security_group" "linux_security" {
  name        = "linux_security"
  description = "Allow SSH port from anywhere"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
